# rust-dapr

./: .gitignore  Cargo.toml  README.md
dapr/: Cargo.toml  build.rs
dapr-derive/: Cargo.toml
dapr-derive/src/: args.rs  client.rs  expand.rs  lib.rs  mock.rs  parse.rs  stub.rs
dapr/examples/: caller.rs
dapr/src/: any.rs  client.rs  error.rs  lib.rs  runtime.rs
derive/src/: expand.rs
examples/: caller.rs  client.http  client.rs
src/: any.rs  client.rs  lib.rs  runtime.rs
