[package]
name = "dapr"
version = "0.1.0"
authors = ["Flier Lu <flier.lu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["json"]
json = ["serde", "serde_json"]

[dependencies]
cfg-if = "0.1"
bytes = "0.4"
tonic = { git = "https://github.com/hyperium/tonic.git" }
prost = "0.5"
prost-types = "0.5"
prost-derive = "0.5"

serde = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
tokio = "0.2.0-alpha.6"

[build-dependencies]
tonic-build = { git = "https://github.com/hyperium/tonic.git" }
